The bulb img is added

--- a/index.html
+++ b/index.html
@@ -56,9 +56,8 @@
         bulbElement.src ="img/on.png";
     }
     function off() {
-        bulbElement.src ="img/off.png";
+        bulbElement.src ="img/off.png"
     }
 </script>
-
 </body>
 </html>
