The two buttons is added

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         bulbElement.src ="img/on.png";
     }
     function off() {
-        bulbElement.src ="img/off.png";
+        bulbElement.src ="img/off.png"
     }
 </script>
 </body>
